tests/error/comptime/compare_pointers5.bz
function test()
{
	(consteval {
		consteval i = 0;
		const p = __builtin_comptime_malloc(int32, 1);
		defer __builtin_comptime_free(p);

		&i < p;
	});
}
